Implement RiskScore transformer for feature engineering; update preprocessing pipeline and add unit tests for validation

--- a/config.yaml
+++ b/config.yaml
@@ -68,8 +68,10 @@ raw_features:
 features:
   continuous:
     - rx_ds
+    - risk_score
   categorical: []
   engineered:
+    - risk_score
     - rx_ds_norm
     - rx_ds_bucket_Q1
     - rx_ds_bucket_Q2
