Refactor RiskScore transformer to accept ICD-10 flags from config; update preprocessing pipeline and tests accordingly

--- a/config.yaml
+++ b/config.yaml
@@ -95,6 +95,25 @@ features:
     - T
     - V
 
+icd10_chapter_flags:
+  - A
+  - B
+  - C
+  - D
+  - E
+  - F
+  - H
+  - I
+  - J
+  - K
+  - L
+  - M
+  - N
+  - R
+  - S
+  - T
+  - V
+
 target: OD
 
 metrics:
