--- a/environment.yml
+++ b/environment.yml
@@ -15,8 +15,11 @@ dependencies:
   - scikit-learn=1.6.1   # Machine learning library for model training and evaluation
   - scipy=1.15.2         # Core scientific computation
   - pip=25.1.1           # Allows pip-only packages to be installed below
-
+  - hydra-core           # Core library for Hydra configuration management
+  - omegaconf            # Configuration management library for structured configs
   - pip:
       - pytest-cov==6.1.1  # Test coverage reporting for code quality and completeness
       - black==25.1.0      # Code formatting to enforce style and readability
       - flake8==7.2.0      # Linting to check code for errors and best practices
+      - mlflow-skinny==2.22.0  # Experiment tracking and model management
+      - wandb==0.19.11         # Weights & Biases for experiment tracking and visualization
