Add data/inference directory to .gitignore and include dvc in environment.yml for dataset management

--- a/environment.yml
+++ b/environment.yml
@@ -17,6 +17,7 @@ dependencies:
   - pip=25.1.1           # Allows pip-only packages to be installed below
   - hydra-core           # Core library for Hydra configuration management
   - omegaconf            # Configuration management library for structured configs
+  - dvc                  # Data Version Control for managing ML datasets and models
   - pip:
       - pytest-cov==6.1.1  # Test coverage reporting for code quality and completeness
       - black==25.1.0      # Code formatting to enforce style and readability
