Add DVC S3 extension to environment for enhanced dataset management

--- a/environment.yml
+++ b/environment.yml
@@ -18,7 +18,8 @@ dependencies:
   - hydra-core           # Core library for Hydra configuration management
   - omegaconf            # Configuration management library for structured configs
   - dvc                  # Data Version Control for managing ML datasets and models
-  - awscli
+  - dvc-s3               # DVC extension for S3 storage support (for dataset management)
+  - awscli               # AWS Command Line Interface for interacting with AWS services
   - pip:
       - pytest-cov==6.1.1  # Test coverage reporting for code quality and completeness
       - black==25.1.0      # Code formatting to enforce style and readability
