--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,6 @@ pip-wheel-metadata/
 logs/
 *.log
 
-
 # Test, split, and processed data (if/when added)
 data/processed/
 data/splits/
@@ -44,3 +43,10 @@ Thumbs.db
 .vscode/
 .idea/
 /data
+
+# Mlflow and WandB tracking files
+mlruns/
+wandb/
+
+# Hydra config files
+outputs/
