--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,4 @@
 # This file is used to set up the parameters for data loading, logging, and other settings.
-
 main:
   WANDB_PROJECT: opioid_mlops_project
   WANDB_ENTITY: idiazl  # Replace with your actual wandb entity/team
@@ -246,3 +245,10 @@ data_validation:
         dtype: "int"
         required: true
         allowed_values: [0, 1]
+
+data_load:
+  data_stage: "raw"  # Stage of data to load: raw, processed, or both
+  output_dir: "artifacts"  # Directory to save processed data and artifacts
+  log_artifacts: true       # Whether to log artifacts to W&B
+  log_summary_stats: true   # Whether to log summary statistics to W&B
+  log_sample_artifacts: true # Whether to log sample artifacts (e.g., first few rows) to W&B
